--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18",
+    "react-fast-marquee": "^1.6.2",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
